[workspace]
members = ["runner", "stardust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Irate-Walrus"]
description = "A broken 64-bit position independent implant template for Rust 🦀"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = "z"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization, without this "HELLO HEAP" will segfault
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
