[package]
name = "stardust"
version = "0.1.0"
edition = "2021"
authors = ["Irate-Walrus"]

[dependencies]
djb2_macro = { path = "../djb2_macro" }
phnt = { git = "https://github.com/Irate-Walrus/phnt-rs.git", optional = true }
syscalls = { version = "0.6.18", default-features = false, features = [
    "x86_64",
], optional = true }
goblin = { version = "0.9.2", default-features = false, features = [
    "elf32",
    "elf64",
], optional = true }

[features]
windows = ["phnt"]
linux = ["syscalls", "goblin"]
